--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,13 +1,25 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+# Multi-environment workflow for deploying static content
+name: Deploy to Multiple Environments
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes to specific branches
   push:
-    branches: ["main"]
+    branches:
+      - main        # Production
+      - staging     # Staging
+      - development     # Development
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy'
+        required: true
+        type: choice
+        options:
+          - production
+          - staging
+          - development
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -15,29 +27,53 @@ permissions:
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Allow only one concurrent deployment per environment
 concurrency:
-  group: "pages"
+  group: "pages-${{ github.ref_name }}"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
+  # Determine which environment to deploy to
   deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - branch: main
+            environment: production
+            url_suffix: ''
+          - branch: staging
+            environment: staging
+            url_suffix: '-staging'
+          - branch: development
+            environment: development
+            url_suffix: '-dev'
+    # Only run for the current branch or manual dispatch
+    if: |
+      (github.event_name == 'push' && github.ref_name == matrix.branch) ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == matrix.environment)
+    environment:
+      name: ${{ matrix.environment }}
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
+      - name: Create environment-specific content
+        run: |
+          echo "Deploying to ${{ matrix.environment }} environment"
+          # You can add environment-specific modifications here
+          # For example, create a config file with environment info
+          echo "{ \"environment\": \"${{ matrix.environment }}\", \"branch\": \"${{ github.ref_name }}\" }" > environment.json
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: '.'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
