--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,11 @@ version: 0.2
 
 env:
   variables:
-    # Set this in CodeBuild project environment variables
+    # Set these in CodeBuild project environment variables:
+    # S3_BUCKET: Your S3 bucket name (currently set to "fws-website")
+    # PRODUCTION_FILE: Content for my_file.txt in production environment
+    # STAGING_FILE: Content for my_file.txt in staging environment
+    # DEV_FILE: Content for my_file.txt in development environment
     S3_BUCKET: "fws-website"
   git-credential-helper: yes
 
@@ -59,6 +63,27 @@ phases:
           echo "S3 bucket '$S3_BUCKET' is accessible"
         else
           echo "ERROR: Cannot access S3 bucket '$S3_BUCKET'"
+          exit 1
+        fi
+      - |
+        # Create my_file.txt with environment-specific content
+        echo "Creating my_file.txt for $DEPLOY_FOLDER environment..."
+        case "$DEPLOY_FOLDER" in
+          production)
+            echo "$PRODUCTION_FILE" > my_file.txt
+            ;;
+          staging)
+            echo "$STAGING_FILE" > my_file.txt
+            ;;
+          development)
+            echo "$DEV_FILE" > my_file.txt
+            ;;
+        esac
+        if [ -f my_file.txt ]; then
+          echo "my_file.txt created successfully"
+          echo "File size: $(wc -c < my_file.txt) bytes"
+        else
+          echo "ERROR: Failed to create my_file.txt"
           exit 1
         fi
 
